--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,9 @@ body
     background: -webkit-linear-gradient(to right, #0f2027, #203a43, #2c5364);
     background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
     width: 100%;
-    height: 700px;
+    height: auto;
     font-family: 'Inter', sans-serif;
+    display: flex;
     align-content: center;
     align-items: center;
     justify-content: center;
@@ -30,6 +31,11 @@ body
 {
     color: #fff;
 }
+.title img
+{
+    width: 45%;
+    margin-bottom: 5%;
+}
 .datos
 {
     display: inline-block;
@@ -37,12 +43,16 @@ body
 }
 .datos input
 {
-    background-color: #2c5364;
-    border: none;
+    background-color: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid 1px #fff;
     color: #fff;
     padding: 5px 10px;
     margin: 8px 10px;
-    border-radius: 5px;
+
+    outline: none;
 }
 ::placeholder
 {
@@ -59,4 +69,26 @@ body
     color: #fff;
     padding: 8px;
     border-radius: 20px;
+    outline: none;
+    margin: 3%;
 }
+.boton button:hover
+{
+    font-size: 16px;
+    transition: 0.5s;
+}
+.registro
+{
+    margin-top: 10%;
+}
+.registro a
+{
+    color: #b8b8b8;
+    font-size: 12px;
+    text-decoration: none;
+}
+.registro a:hover
+{
+    color: #fff;
+}
+
