--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@
 }
 body
 {
-    background: url(https://i.pinimg.com/originals/26/ed/fe/26edfe7476f61c0afa0ad92574065225.gif);
-    background-size:100% 100%;
+    background: url(https://i.pinimg.com/originals/26/ed/fe/26edfe7476f61c0afa0ad92574065225.gif) ;
+    background-size:cover;
     background-repeat: no-repeat;
     background-position: center center;
+    background-attachment: fixed;
     width: 100%;
     height: 625px;
     font-family: 'Inter', sans-serif;
@@ -44,6 +45,7 @@ body
 }
 .datos input
 {
+    width: 90%;
     background-color: transparent;
     border-top: none;
     border-left: none;
@@ -91,4 +93,44 @@ body
 {
     color: #fff;
     transition: 1s;
+}
+
+@media screen and (max-width:1000px) {
+    .form-box
+    {
+        width: 30%;
+    }
+}
+@media screen and (max-width:675px) {
+    .form-box
+    {
+        width: 40%;
+    }
+    .title
+    {
+        font-size: 15px;
+    }
+    .datos input
+    {
+        width: 99%;
+        padding: 10px 0px;
+        margin: 3% 0px;
+        font-size: 11px;
+    }
+}
+@media screen and (max-width:450px) {
+    
+    .title
+    {
+        font-size: 12px;
+    }
+    
+}
+@media screen and (max-width:350px) {
+    
+    .title
+    {
+        font-size: 9px;
+    }
+    
 }
